cluster/services/unifi/mongodb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: unifi-db
  namespace: unifi
spec:
  serviceName: unifi-db
  replicas: 1
  selector:
    matchLabels:
      app: unifi-db
      app.kubernetes.io/instance: unifi-db
      app.kubernetes.io/name: unifi-db
  volumeClaimTemplates:
  - metadata:
      name: unifi-db
      namespace: unifi
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "longhorn"
      resources:
        requests:
          storage: 3Gi
  template:
    metadata:
      labels:
        app: unifi-db
        app.kubernetes.io/instance: unifi-db
        app.kubernetes.io/name: unifi-db
    spec:
      volumes:
      - name: nfs-config
        persistentVolumeClaim:
          claimName: unifi-configs
      containers:
      - name: unifi-db
        # Image version pinned for compat with RPI4.
        image: docker.io/mongo:4.4.18
        volumeMounts:
        - mountPath: /data/db
          name: unifi-db
        - mountPath: /docker-entrypoint-initdb.d
          name: nfs-config
          subPath: "mongodb-initdb.d"

---

apiVersion: v1
kind: Service
metadata:
  name: unifi-db
  namespace: unifi
spec:
  selector:
    app: unifi-db
  ports:
    - port: 27017
      targetPort: 27017
